Explicit dynamics demo

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -16,6 +16,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here, we activate the relevant environment and load modules of interest.\n",
+    "\n",
+    "using Pkg\n",
+    "Pkg.activate(@__DIR__)\n",
+    "using NodeDynamicsDemo"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -36,6 +49,38 @@
     "in which case the first and last nodes are only connected to one node each.\n",
     "\n",
     "> Note that in this demonstration, we're modelling a 1D chain of interlinked nodes. There's nothing preventing from connecting nodes arbitrarily, the math just becomes a tad more complicated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Here, we define our node chain as a `Vector` of `EnergyNode`s.\n",
+    "\n",
+    "# First, let's define the timesteps.\n",
+    "timesteps = ones(100)\n",
+    "\n",
+    "# Next, let's define the nodes.\n",
+    "nodes = [\n",
+    "    EnergyNode(\n",
+    "        [0],\n",
+    "        0.05,\n",
+    "        0.05,\n",
+    "        0.05,\n",
+    "        zeros(length(timesteps))\n",
+    "    )\n",
+    "    for i in 1:5\n",
+    "]\n",
+    "\n",
+    "# Set up the chain\n",
+    "chain = NodeChain(\n",
+    "    nodes,\n",
+    "    ones(length(timesteps)),\n",
+    "    zeros(length(timesteps)),\n",
+    "    timesteps\n",
+    ")"
    ]
   },
   {
@@ -81,6 +126,19 @@
     "\n",
     "However, the key assumption here is *a short enough period $\\Delta t$*. With dynamics too fast\n",
     "for the used time step, this method is prone to numerical instabilities and oscillations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Let's solve the explicit Euler dynamics for our energy chain.\n",
+    "\n",
+    "forward_euler_chain = deepcopy(chain)\n",
+    "solve_explicit_dynamics!(forward_euler_chain)\n",
+    "plot_chain(forward_euler_chain)"
    ]
   },
   {
@@ -230,18 +288,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "julia"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Julia 1.9.2",
+   "language": "julia",
+   "name": "julia-1.9"
+  },
   "language_info": {
-   "name": "python"
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.9.2"
   },
   "orig_nbformat": 4
  },
