--- a/demo.ipynb
+++ b/demo.ipynb
@@ -65,13 +65,13 @@
     "# Next, let's define the nodes.\n",
     "nodes = [\n",
     "    EnergyNode(\n",
-    "        [0],\n",
+    "        [0.0],\n",
     "        0.05,\n",
     "        0.05,\n",
     "        0.05,\n",
     "        zeros(length(timesteps))\n",
     "    )\n",
-    "    for i in 1:5\n",
+    "    for i in 1:4\n",
     "]\n",
     "\n",
     "# Set up the chain\n",
@@ -137,7 +137,7 @@
     "## Let's solve the explicit Euler dynamics for our energy chain.\n",
     "\n",
     "forward_euler_chain = deepcopy(chain)\n",
-    "solve_explicit_dynamics!(forward_euler_chain)\n",
+    "@time solve_explicit_dynamics!(forward_euler_chain)\n",
     "plot_chain(forward_euler_chain)"
    ]
   },
@@ -171,11 +171,11 @@
     "$$\n",
     "\\underbrace{\n",
     "    \\begin{bmatrix}\n",
-    "    1 + \\sigma_0 + \\rho_{0,1} & - \\rho_{0,1} & 0 & 0 & \\dots & 0 & 0 & 0 \\\\\n",
-    "    - \\rho_{1,0} & 1 + \\sigma_1 + \\rho_{1,2} + \\rho_{1,0} & - \\rho_{1,2} & 0 & \\dots & 0 & 0 & 0 \\\\\n",
+    "    \\frac{1}{\\Delta t} + \\sigma_0 + \\rho_{0,-1} + \\rho_{0,1} & - \\rho_{0,1} & 0 & 0 & \\dots & 0 & 0 & 0 \\\\\n",
+    "    - \\rho_{1,0} & \\frac{1}{\\Delta t} + \\sigma_1 + \\rho_{1,0} + \\rho_{1,2} & - \\rho_{1,2} & 0 & \\dots & 0 & 0 & 0 \\\\\n",
     "    \\dots & \\dots & \\dots & \\dots & \\dots & \\dots & \\dots & \\dots \\\\\n",
-    "    0 & 0 & 0 & 0 & \\dots & - \\rho_{N-1,N-2} & 1 + \\sigma_{N-1} + \\rho_{N-1,N-2} + \\rho_{N-1,N} & - \\rho_{N-1,N} \\\\\n",
-    "    0 & 0 & 0 & 0 & \\dots & 0 & - \\rho_{N,N-1} & 1 + \\sigma_N + \\rho_{N,N-1}\n",
+    "    0 & 0 & 0 & 0 & \\dots & - \\rho_{N-1,N-2} & \\frac{1}{\\Delta t} + \\sigma_{N-1} + \\rho_{N-1,N-2} + \\rho_{N-1,N} & - \\rho_{N-1,N} \\\\\n",
+    "    0 & 0 & 0 & 0 & \\dots & 0 & - \\rho_{N,N-1} & \\frac{1}{\\Delta t} + \\sigma_N + \\rho_{N,N-1} + \\rho_{N,N+1} \n",
     "    \\end{bmatrix}\n",
     "}_{\\underline{A}}\n",
     "\\begin{bmatrix}\n",
@@ -183,11 +183,11 @@
     "\\end{bmatrix}\n",
     "=\n",
     "\\begin{bmatrix}\n",
-    "E_{0,t-\\Delta t} + P_{0,t} + \\rho_{0,-1} E_{-1,t} \\\\\n",
-    "E_{1,t-\\Delta t} + P_{1,t} \\\\\n",
+    "\\frac{E_{0,t-\\Delta t}}{\\Delta t} + P_{0,t} + \\rho_{-1,0} E_{-1,t} \\\\\n",
+    "\\frac{E_{1,t-\\Delta t}}{\\Delta t} + P_{1,t} \\\\\n",
     "\\dots \\\\\n",
-    "E_{N-1,t-\\Delta t} + P_{N-1,t} \\\\\n",
-    "E_{N,t-\\Delta t} + P_{N,t} + \\rho_{N,N+1} E_{N+1,t}\n",
+    "\\frac{E_{N-1,t-\\Delta t}}{\\Delta t} + P_{N-1,t} \\\\\n",
+    "\\frac{E_{N,t-\\Delta t}}{\\Delta t} + P_{N,t} + \\rho_{N+1,N} E_{N+1,t}\n",
     "\\end{bmatrix}\n",
     "$$\n",
     "> Note that $E_{-1,t}$ and $E_{N+1,t}$ represent the set boundary conditions, if any. If the boundaries are left free, the terms are simply omitted.\n",
@@ -196,6 +196,30 @@
     "the right-hand side on the initial time step $t-\\Delta t$ is known.\n",
     "Thus, we can solve the vector of current $t$ energy contents of the system\n",
     "by inverting matrix $\\underline{A}$ and multiplying both sides with its inverse from the left."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Let's solve the implicit dynamics:\n",
+    "\n",
+    "backward_euler_chain = deepcopy(chain)\n",
+    "@time solve_implicit_dynamics!(backward_euler_chain)\n",
+    "plot_chain(backward_euler_chain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using LinearAlgebra\n",
+    "td = Tridiagonal(Vector{Float64}(),[1.0],Vector{Float64}())\n",
+    "inv(td)"
    ]
   },
   {
