--- a/demo.ipynb
+++ b/demo.ipynb
@@ -138,7 +138,7 @@
     "\n",
     "forward_euler_chain = deepcopy(chain)\n",
     "@time solve_explicit_dynamics!(forward_euler_chain)\n",
-    "plot_chain(forward_euler_chain)"
+    "fw_plt = plot_chain(forward_euler_chain)"
    ]
   },
   {
@@ -208,18 +208,7 @@
     "\n",
     "backward_euler_chain = deepcopy(chain)\n",
     "@time solve_implicit_dynamics!(backward_euler_chain)\n",
-    "plot_chain(backward_euler_chain)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using LinearAlgebra\n",
-    "td = Tridiagonal(Vector{Float64}(),[1.0],Vector{Float64}())\n",
-    "inv(td)"
+    "bw_plot = plot_chain(backward_euler_chain)"
    ]
   },
   {
@@ -242,11 +231,11 @@
     "=\n",
     "\\underbrace{\n",
     "    \\begin{bmatrix}\n",
-    "    -\\sigma_{0} -\\rho_{0,1} & \\rho_{0,1} & 0 & \\dots & 0 & 0 \\\\\n",
+    "    -\\sigma_{0} -\\rho_{0,-1} -\\rho_{0,1} & \\rho_{0,1} & 0 & \\dots & 0 & 0 \\\\\n",
     "    \\rho_{1,0} & -\\sigma_{1} -\\rho_{1,0} - \\rho_{1,2} & \\rho_{1,2} & 0 & \\dots & 0 \\\\\n",
     "    \\dots & \\dots & \\dots & \\dots & \\dots & \\dots \\\\\n",
     "    0 & \\dots & 0 & \\rho_{N-1,N-2} & -\\sigma_{N-1} -\\rho_{N-1,N-2} - \\rho_{N-1,N} & \\rho_{N-1,N} \\\\\n",
-    "    0 & 0 & \\dots & 0 & \\rho_{N,N-1} & -\\sigma_{N} -\\rho_{N,N-1}\n",
+    "    0 & 0 & \\dots & 0 & \\rho_{N,N-1} & -\\sigma_{N} -\\rho_{N,N-1} -\\rho_{N,N+1}\n",
     "    \\end{bmatrix}\n",
     "}_{B}\n",
     "\\begin{bmatrix}\n",
@@ -258,11 +247,11 @@
     "\\end{bmatrix}\n",
     "+\n",
     "\\begin{bmatrix}\n",
-    "P_0(t) \\\\\n",
+    "P_0(t) + \\rho_{-1,0} E_{-1,t} \\\\\n",
     "P_1(t) \\\\\n",
     "\\dots \\\\\n",
     "P_{N-1}(t) \\\\\n",
-    "P_{N}(t) \\\\\n",
+    "P_{N}(t) + \\rho_{N+1,N} E_{N+1,t} \\\\\n",
     "\\end{bmatrix}\n",
     "\\\\\n",
     "\\Leftrightarrow \\underline{\\dot{E}}(t) = \\underline{B} \\underline{E}(t) + \\underline{P}(t)\n",
@@ -314,12 +303,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Let's solve the analytical dynamics:\n",
+    "\n",
+    "analytical_chain = deepcopy(chain)\n",
+    "@time solve_analytical_dynamics!(analytical_chain)\n",
+    "an_plt = plot_chain(analytical_chain)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.9.2",
+   "display_name": "Julia 1.9.3",
    "language": "julia",
    "name": "julia-1.9"
   },
@@ -327,7 +322,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.9.2"
+   "version": "1.9.3"
   },
   "orig_nbformat": 4
  },
