--- a/demo.ipynb
+++ b/demo.ipynb
@@ -52,6 +52,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Node chain for testing\n",
+    "\n",
+    "For testing that the equations work, we want to define a chain with an easily\n",
+    "deductible end state.\n",
+    "Here, let's define a chain that starts with all nodes at idential states,\n",
+    "with the boundaries fixed at zero, and no external influxes.\n",
+    "With self-discharge and diffusion both tending towards zero, we should see\n",
+    "the chain start \"cooling\" towards zero, with nodes towards the end of the chain\n",
+    "cooling faster due to the fixed boundary states.\n",
+    "Ultimately, all chains should reach stable zeroes across all nodes.\n",
+    "\n",
+    "Furthermore, since the chain is symmetric, we should only see the lines for\n",
+    "the later nodes, as they overlap their earlier symmetric counterparts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -65,19 +84,19 @@
     "# Next, let's define the nodes.\n",
     "nodes = [\n",
     "    EnergyNode(\n",
-    "        [0.0],\n",
+    "        [10.0],\n",
     "        0.05,\n",
     "        0.05,\n",
     "        0.05,\n",
     "        zeros(length(timesteps))\n",
     "    )\n",
-    "    for i in 1:4\n",
+    "    for i in 1:5\n",
     "]\n",
     "\n",
     "# Set up the chain\n",
     "chain = NodeChain(\n",
     "    nodes,\n",
-    "    ones(length(timesteps)),\n",
+    "    zeros(length(timesteps)),\n",
     "    zeros(length(timesteps)),\n",
     "    timesteps\n",
     ")"
