Add new examples and comparisons

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -227,7 +227,7 @@
     "\n",
     "backward_euler_chain = deepcopy(chain)\n",
     "@time solve_implicit_dynamics!(backward_euler_chain)\n",
-    "bw_plot = plot_chain(backward_euler_chain)"
+    "bw_plt = plot_chain(backward_euler_chain)"
    ]
   },
   {
@@ -329,6 +329,259 @@
     "@time solve_analytical_dynamics!(analytical_chain)\n",
     "an_plt = plot_chain(analytical_chain)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparing the solutions\n",
+    "\n",
+    "Next, let's compare the solutions a bit.\n",
+    "From the example chain above, we probably won't see a whole lot of difference\n",
+    "between the solutions, as the time steps are short enough compared to the\n",
+    "self-discharge and diffusion parameters.\n",
+    "However, we should still see the analytical solution in between the explicit\n",
+    "and implicit solutions if we look close enough."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Let's overlay the plots from before to see the differences in the dynamics.\n",
+    "\n",
+    "using Plots\n",
+    "colors = palette(:auto, length(chain.nodes))\n",
+    "\n",
+    "comparison_plt = plot_chain(analytical_chain; palette=colors)\n",
+    "plot_chain!(comparison_plt, forward_euler_chain; linestyle=:dash, palette=colors)\n",
+    "plot_chain!(comparison_plt, backward_euler_chain; linestyle=:dashdotdot, palette=colors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ok, seems like it's behaving as expected, although it's a bit difficult to tell.\n",
+    "Let's define a different chain to see if we can get easier to see results.\n",
+    "\n",
+    "\n",
+    "### New chains for dynamics comparison\n",
+    "\n",
+    "Let's define a 5-node chain starting from zero, with one end tied to zero and\n",
+    "the other to one. That way, we should see each node more easily."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Constant timesteps still.\n",
+    "timesteps = ones(100)\n",
+    "\n",
+    "# Still five nodes, this time starting from zero.\n",
+    "nodes = [\n",
+    "    EnergyNode(\n",
+    "        [0.0],\n",
+    "        0.05,\n",
+    "        0.05,\n",
+    "        0.05,\n",
+    "        zeros(length(timesteps))\n",
+    "    )\n",
+    "    for i in 1:5\n",
+    "]\n",
+    "\n",
+    "# Set up the chain\n",
+    "chain = NodeChain(\n",
+    "    nodes,\n",
+    "    zeros(length(timesteps)),\n",
+    "    ones(length(timesteps)),\n",
+    "    timesteps\n",
+    ")\n",
+    "\n",
+    "# Copy chains and solve dynamics\n",
+    "analytical_chain, forward_chain, backwards_chain = deepcopy.([chain, chain, chain])\n",
+    "solve_analytical_dynamics!(analytical_chain)\n",
+    "solve_explicit_dynamics!(forward_chain)\n",
+    "solve_implicit_dynamics!(backwards_chain)\n",
+    "\n",
+    "# Define color palette and plot results\n",
+    "using Plots\n",
+    "colors = palette(:auto, length(chain.nodes))\n",
+    "comparison_plot = plot_chain(analytical_chain; palette=colors)\n",
+    "plot_chain!(comparison_plot, forward_chain; linestyle=:dash, palette=colors)\n",
+    "plot_chain!(comparison_plot, backwards_chain; linestyle=:dashdotdot, palette=colors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Seems fine. The time resolution is too easy for the discretizations, though,\n",
+    "as we can barely see any differences between the nodes.\n",
+    "\n",
+    "### Let's mess with the time steps and see what happens!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Timestep increases by 1 every step.\n",
+    "timesteps = cumsum(ones(20))\n",
+    "\n",
+    "# Still five nodes, this time starting from zero.\n",
+    "nodes = [\n",
+    "    EnergyNode(\n",
+    "        [0.0],\n",
+    "        0.05,\n",
+    "        0.05,\n",
+    "        0.05,\n",
+    "        zeros(length(timesteps))\n",
+    "    )\n",
+    "    for i in 1:5\n",
+    "]\n",
+    "\n",
+    "# Set up the chain\n",
+    "chain = NodeChain(\n",
+    "    nodes,\n",
+    "    zeros(length(timesteps)),\n",
+    "    ones(length(timesteps)),\n",
+    "    timesteps\n",
+    ")\n",
+    "\n",
+    "# Copy chains and solve dynamics\n",
+    "analytical_chain, forward_chain, backwards_chain = deepcopy.([chain, chain, chain])\n",
+    "solve_analytical_dynamics!(analytical_chain)\n",
+    "solve_explicit_dynamics!(forward_chain)\n",
+    "solve_implicit_dynamics!(backwards_chain)\n",
+    "\n",
+    "# Define color palette and plot results\n",
+    "using Plots\n",
+    "colors = palette(:auto, length(chain.nodes))\n",
+    "comparison_plot = plot_chain(analytical_chain; palette=colors)\n",
+    "plot_chain!(comparison_plot, forward_chain; linestyle=:dash, palette=colors)\n",
+    "plot_chain!(comparison_plot, backwards_chain; linestyle=:dashdotdot, palette=colors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ok, seems like the explicit approximation starts to break down at long timesteps.\n",
+    "This is to be expected, as the forward Euler is notorious for becoming\n",
+    "numerically unstable unless the time step is short enough for the application.\n",
+    "\n",
+    "### In fact, let's see how the methods behave when using different time steps lengths!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lets define the same time period using different time step lengths!\n",
+    "dts = [1,2,5,10]\n",
+    "timesteps_dict = Dict(\n",
+    "    dt => float.(repeat([dt], div(100, dt)))\n",
+    "    for dt in [1,2,5,10]\n",
+    ")\n",
+    "markers = Dict(\n",
+    "    float(dt) => m\n",
+    "    for (dt, m) in zip(dts, [:none, :circle, :rect, :diamond])\n",
+    ") # Markers to make the time resolutions easier to distinguish.\n",
+    "\n",
+    "# Three nodes starting from zero, but using different timesteps\n",
+    "nodes_dict = Dict(\n",
+    "    dt => [\n",
+    "        EnergyNode(\n",
+    "            [0.0],\n",
+    "            0.05,\n",
+    "            0.05,\n",
+    "            0.05,\n",
+    "            zeros(length(timesteps))\n",
+    "        )\n",
+    "        for i in 1:3\n",
+    "    ]\n",
+    "    for (dt, timesteps) in timesteps_dict\n",
+    ")\n",
+    "\n",
+    "# Set up the chains with different time step lengths.\n",
+    "chains_dict = Dict(\n",
+    "    dt => NodeChain(\n",
+    "        nodes_dict[dt],\n",
+    "        zeros(length(timesteps)),\n",
+    "        ones(length(timesteps)),\n",
+    "        timesteps\n",
+    "    )\n",
+    "    for (dt, timesteps) in timesteps_dict\n",
+    ")\n",
+    "\n",
+    "# Initialize plots and loop solve\n",
+    "using Plots\n",
+    "plt_dict = Dict(\n",
+    "    method => plot()\n",
+    "    for method in [\n",
+    "        solve_analytical_dynamics!,\n",
+    "        solve_implicit_dynamics!,\n",
+    "        solve_explicit_dynamics!\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Loop over the methods and chains with different time resolutions.\n",
+    "for (method, plt) in plt_dict\n",
+    "    for (dt, chai) in chains_dict\n",
+    "        cha = deepcopy(chai)\n",
+    "        colors = palette(:auto, length(cha.nodes))\n",
+    "        method(cha)\n",
+    "        plot_chain!(\n",
+    "            plt,\n",
+    "            cha;\n",
+    "            palette=colors,\n",
+    "            marker=markers[dt],\n",
+    "            markersize=2,\n",
+    "            title=\"$(method)\",\n",
+    "            size=(1800,400)\n",
+    "        )\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "# Gather plots\n",
+    "plot(values(plt_dict)..., layout=(1,3), )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above graphs, markers represent the following time step lengths:\n",
+    "- No marker represents the most accurate solution at step length 1.\n",
+    "- Circle represents the next best solution at step length 2.\n",
+    "- Rectangles are the next step at length 5.\n",
+    "- Diamonds are the last step at length 10.\n",
+    "\n",
+    "As expected, the implicit solution begins underestimating the changes\n",
+    "as the timestep is increased, while the explicit method overestimates them\n",
+    "until going ham at longer step lengths. Meanwhile, the analytical solution\n",
+    "behaves as expected, with all of the solutions on the same trajectory regardless\n",
+    "of the time resolution. This is because the analytical solution represents\n",
+    "the real undiscretized behaviour of the system, only sampled at the desired\n",
+    "points in time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
