Implement the proposed BB implicit pseudo method?

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -531,7 +531,8 @@
     "    for method in [\n",
     "        solve_analytical_dynamics!,\n",
     "        solve_implicit_dynamics!,\n",
-    "        solve_explicit_dynamics!\n",
+    "        solve_explicit_dynamics!,\n",
+    "        solve_implicit_pseudo_dynamics!,\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -548,13 +549,13 @@
     "            marker=markers[dt],\n",
     "            markersize=2,\n",
     "            title=\"$(method)\",\n",
-    "            size=(1800,400)\n",
+    "            size=(1200,800)\n",
     "        )\n",
     "    end\n",
     "end\n",
     "\n",
     "# Gather plots\n",
-    "plot(values(plt_dict)..., layout=(1,3), )"
+    "plot(values(plt_dict)..., layout=(2,2), )"
    ]
   },
   {
