Implement explicit pseudo dynamics

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -533,6 +533,7 @@
     "        solve_implicit_dynamics!,\n",
     "        solve_explicit_dynamics!,\n",
     "        solve_implicit_pseudo_dynamics!,\n",
+    "        solve_explicit_pseudo_dynamics!,\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -555,7 +556,7 @@
     "end\n",
     "\n",
     "# Gather plots\n",
-    "plot(values(plt_dict)..., layout=(2,2), )"
+    "plot(values(plt_dict)..., layout=(2,3), )"
    ]
   },
   {
